feat: done 2nd task in 3rd lab

--- a/Laba3/app/src/main/res/values/strings.xml
+++ b/Laba3/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">Laba3</string>
+    <string name="firstTextView">The first TextView</string>
+    <string name="secondTextview">Yet another TextView</string>
+    <string name="thirdTextview">Almost last TextView</string>
+    <string name="lastTextview">Last TextView</string>
+    <string name="buttonOk">OK</string>
+    <string name="buttonThen">THEN</string>
 </resources>
