feat: доп задания ко 2 лабе

--- a/Laba2/app/src/main/res/values/strings.xml
+++ b/Laba2/app/src/main/res/values/strings.xml
@@ -5,6 +5,6 @@
     <string name="Specialization">Specialization:</string>
     <string name="photo">Photo</string>
     <string name="projects">Projects</string>
-    <string name="achievements">Achievements</string>
+    <string name="achievements">Achievs</string>
     <string name="profile_avatar">Profile`s avatar</string>
 </resources>
